--- a/themes/political_scss/4-components/_code.scss
+++ b/themes/political_scss/4-components/_code.scss
@@ -3,10 +3,10 @@
   // ^Affects Notion Code Markdown  
 code.code {
   border-radius: var(--element-radius) !important;
-  background-color: var(--color-default) !important;
-  color: var(--color-text-pink) !important;
+  background-color: var(--color-bg-blue-light) !important;
+  color: var(--color-text-red) !important;
   text-shadow: 1px 1px 1px black !important;
-  font-size: 1rem;
+  font-size: 0.9rem;
   padding: .2em .4em;
   word-break: break-word !important;
 }
